fix padding on smaller screens

--- a/styles/main.module.css
+++ b/styles/main.module.css
@@ -90,7 +90,7 @@
         max-width: none;
         min-height: none;
         padding: 0;
-		padding: 0px 25px;
+		padding: 0px 10px;
     }
 
 	.meteorShower {
